--- a/app/views/chm/advisory_boards/_show_member.html.erb
+++ b/app/views/chm/advisory_boards/_show_member.html.erb
@@ -1,6 +1,6 @@
 <%= detail_data_table(datas.length) do %>
   <!--  irm datatable      -->
-  <div class="irm-datatable">
+  <div class="datatable">
     <div>
         <table>
           <thead>
