--- a/app/views/chm/advisory_boards/show.html.erb
+++ b/app/views/chm/advisory_boards/show.html.erb
@@ -1,57 +1,54 @@
 <%= page_title %>
-
-<div id="ep" class="detail-block page-block">
-  <div class="pbHeader">
-    <table cellpadding="0" cellspacing="0" border="0">
+<!--页面结构-->
+<div class="show-block">
+  <table class="page-block-header"><tr>
+    <td class="page-block-title">
+      <h2 class="block-title"><%= t(:label_chm_advisory_board) %></h2>
+    </td>
+    <td class="page-block-button">
+      <%= link_to t(:edit), {:action => "edit", :id => @advisory_board},:class=>"btn btn-primary"%>
+      <%= link_to t(:new), {:action => "new"},:class=>"btn"%>
+      <%= link_to t(:back), {:action => "index"},:class=>"btn" %>
+    </td>
+  </tr></table>
+  <div class="page-block-body">
+    <table class="show-table">
       <tbody>
         <tr>
-          <td class="pbTitle"><h2 class="mainTitle"><%= t(:label_chm_advisory_board) %></h2></td>
-          <td id="topButtonRow" class="pbButton">
-            <div class="button"><%= link_to t(:edit), {:action => "edit", :id => @advisory_board}%></div>
-            <div class="button"><%= link_to t(:back), {:action => "index"}%></div>
-          </td>
+          <td class="label-col"><label for="code"><%=t(:code)%></label></td>
+          <td class="data-col"><%=@advisory_board.code%></td>
+          <td class="label-col empty">&nbsp;</td>
+          <td class="data-col empty">&nbsp;</td>
+        </tr>
+        <tr>
+          <td class="label-col"><label for="name"><%=t(:name)%></label></td>
+          <td class="data-col"><%=@advisory_board.name%></td>
+          <td class="label-col empty">&nbsp;</td>
+          <td class="data-col empty">&nbsp;</td>
+        </tr>
+        <tr>
+          <td class="label-col"><label for="description"><%=t(:description)%></label></td>
+          <td class="data-col" colspan="3" width="82%"><%=@advisory_board.description%></td>
         </tr>
       </tbody>
     </table>
   </div>
-  <div class="pbBody">
-    <div class="pbSubsection">
-
-          <table class="detailList" cellpadding="0" cellspacing="0" border="0">
-            <tbody>
-              <tr>
-                <td class="labelCol"><label for="code"><%=t(:code)%></label></td>
-                <td class="dataCol"><%=@advisory_board.code%></td>
-                <td class="labelCol empty">&nbsp;</td>
-                <td class="dataCol empty">&nbsp;</td>
-              </tr>
-              <tr>
-                <td class="labelCol"><label for="name"><%=t(:name)%></label></td>
-                <td class="dataCol"><%=@advisory_board.name%></td>
-                <td class="labelCol empty">&nbsp;</td>
-                <td class="dataCol empty">&nbsp;</td>
-              </tr>
-              <tr>
-                <td class="labelCol"><label for="description"><%=t(:description)%></label></td>
-                <td class="dataCol" colspan="3" width="82%"><%=@advisory_board.description%></td>
-              </tr>
-            </tbody>
-          </table>
-
+</div>
+<!--页面结构-->
+<div class="page-block">
+  <table class="page-block-header">
+    <tr>
+      <td class="page-block-title">
+        <h2 class="block-title"><%= t(:label_chm_advisory_board_member) %></h2>
+      </td>
+      <td class="page-block-button">
+        <%= link_to t(:add), {:controller=>"chm/advisory_board_members",:action => "new",:advisory_board_id=>@advisory_board.id,:back_url=>url_for({})},:class=>"btn"%>
+      </td>
+    </tr>
+  </table>
+  <div class="page-block-body">
+    <div id="task_templates">
+      <%= render :partial=>"chm/advisory_boards/show_member",:locals=>{:datas=>advisory_board_members(@advisory_board.id)} %>
     </div>
   </div>
 </div>
-
-<%= page_block("showTask") do |pb| %>
-    <%= pb.page_block_header({:title=>t(:label_chm_advisory_board_member)}) do%>
-      <td  class="pbButton">
-        <div class="button"><%= link_to t(:add), {:controller=>"chm/advisory_board_members",:action => "new",:advisory_board_id=>@advisory_board.id,:back_url=>url_for({})}%></div>
-      </td>
-      <td class="pbHelp">
-      </td>
-    <% end %>
-
-    <%= pb.page_block_body do %>
-        <%= render :partial=>"chm/advisory_boards/show_member",:locals=>{:datas=>advisory_board_members(@advisory_board.id)} %>
-    <% end %>
-<% end %>
