--- a/app/views/chm/advisory_boards/_new_form.html.erb
+++ b/app/views/chm/advisory_boards/_new_form.html.erb
@@ -40,6 +40,7 @@
         </td>
       </tr>
     </table>
+    <%= error_for @advisory_board %>
     <div class="page-block-body">
       <div class="sub-page-block">
         <!-- 一般信息 -->
