--- a/app/views/chm/advisory_boards/index.html.erb
+++ b/app/views/chm/advisory_boards/index.html.erb
@@ -15,9 +15,8 @@
     </tr>
   </table>
   <div class="page-block-body">
-    <div id="advisory_boards">
-      <%= datatable("advisory_boards",{:action=>"get_data",:format=>"json"},[],{:paginator_box=>"advisory_boardsPaginatorBox",:search_box=>"advisory_boardsSearchBox"})%>
-    </div>
+    <div id="advisory_boards"></div>
+    <%= datatable("advisory_boards",{:action=>"get_data",:format=>"json"},[],{:paginator_box=>"advisory_boardsPaginatorBox",:search_box=>"advisory_boardsSearchBox"})%>
     <div id="advisory_boardsPaginatorBox"></div>
   </div>
 </div>
