--- a/app/views/chm/change_task_templates/_show_tasks.html.erb
+++ b/app/views/chm/change_task_templates/_show_tasks.html.erb
@@ -1,6 +1,6 @@
 <%= detail_data_table(datas.length) do %>
   <!--  irm datatable      -->
-  <div class="irm-datatable">
+  <div class="datatable">
     <div>
         <table>
           <thead>
