--- a/modules/50_change_chm/app/views/chm/advisory_boards/get_data.html.erb
+++ b/modules/50_change_chm/app/views/chm/advisory_boards/get_data.html.erb
@@ -1,7 +1,7 @@
 <%=datatable_view({:count=>@count,:datas=>@datas}) do |builder|%>
   <% builder.column(:id,{:title=>t(:operation), :width => "80px"}) do |data|%>
-    <%= link_to(t(:edit),{:action=>"edit",:id=>data[:id]}) %>&nbsp;
-    <%= link_to(t(:show),{:action=>"show", :id => data[:id]})%>
+    <%= link_to(t(:edit),{:action=>"edit",:id=>data[:id]},:class => "action-link") %>&nbsp;|
+    <%= link_to(t(:show),{:action=>"show", :id => data[:id]},:class => "action-link")%>
   <% end %>
   <% builder.column(:code,{:title=>t(:code),:searchable=>true})  %>
   <% builder.column(:name,{:title=>t(:name),:searchable=>true})%>
